--- a/sci.html
+++ b/sci.html
@@ -6,52 +6,136 @@
   <title>Scientific Calculator</title>
   <style>
     body {
-      background: #1e1e1e;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
     }
+
     .calculator {
-      background: #2e2e2e;
+      border: 2px solid #333;
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      border-radius: 10px;
+      background-color: white;
       width: 350px;
     }
-    input {
+
+    .calculator input {
       width: 100%;
-      height: 60px;
-      font-size: 1.5em;
-      padding: 10px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      border: none;
-      background: #121212;
-      color: #fff;
+      height: 50px;
       text-align: right;
+      margin-bottom: 10px;
+      font-size: 24px;
+      padding: 10px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
+
     .buttons {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 10px;
     }
-    button {
-      padding: 20px;
-      font-size: 1.1em;
-      border: none;
-      border-radius: 8px;
-      background: #3a3a3a;
-      color: #fff;
+
+    .buttons button {
+      padding: 15px;
+      font-size: 18px;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
       cursor: pointer;
-      transition: background 0.2s;
+      transition: background-color 0.2s ease;
     }
-    button:hover {
-      background: #555;
+
+    .buttons button:hover {
+      background-color: #ddd;
     }
-    .equal {
-      grid-column: span 2;
-      background: #4CAF50;
+
+    .buttons button:active {
+      background-color: #ccc;
     }
+
+    .buttons .operator {
+      background-color: #e67e22;
+      color: white;
+    }
+
+    .buttons .function {
+      background-color: #d5d5d5;
+    }
+  </style>
+</head>
+<body>
+
+<div class="calculator">
+  <input type="text" id="display" disabled />
+  <div class="buttons">
+    <button class="function" onclick="clearDisplay()">C</button>
+    <button class="function" onclick="backspace()">⌫</button>
+    <button class="function" onclick="appendValue('(')">(</button>
+    <button class="function" onclick="appendValue(')')">)</button>
+    <button class="operator" onclick="appendValue('/')">÷</button>
+
+    <button onclick="appendValue('7')">7</button>
+    <button onclick="appendValue('8')">8</button>
+    <button onclick="appendValue('9')">9</button>
+    <button class="operator" onclick="appendValue('*')">×</button>
+    <button class="function" onclick="appendValue('Math.pow(')">xʸ</button>
+
+    <button onclick="appendValue('4')">4</button>
+    <button onclick="appendValue('5')">5</button>
+    <button onclick="appendValue('6')">6</button>
+    <button class="operator" onclick="appendValue('-')">−</button>
+    <button class="function" onclick="appendValue('Math.sqrt(')">√</button>
+
+    <button onclick="appendValue('1')">1</button>
+    <button onclick="appendValue('2')">2</button>
+    <button onclick="appendValue('3')">3</button>
+    <button class="operator" onclick="appendValue('+')">+</button>
+    <button class="function" onclick="appendValue('Math.log10(')">log</button>
+
+    <button onclick="appendValue('0')">0</button>
+    <button onclick="appendValue('.')">.</button>
+    <button class="operator" onclick="calculateResult()">=</button>
+    <button class="function" onclick="appendValue('Math.PI')">π</button>
+    <button class="function" onclick="appendValue('Math.E')">e</button>
+
+    <button class="function" onclick="appendValue('Math.sin(')">sin</button>
+    <button class="function" onclick="appendValue('Math.cos(')">cos</button>
+    <button class="function" onclick="appendValue('Math.tan(')">tan</button>
+    <button class="function" onclick="appendValue('Math.log(')">ln</button>
+    <button class="function" onclick="appendValue('**')">^</button>
+  </div>
+</div>
+
+<script>
+  function appendValue(value) {
+    document.getElementById('display').value += value;
+  }
+
+  function clearDisplay() {
+    document.getElementById('display').value = '';
+  }
+
+  function backspace() {
+    let display = document.getElementById('display');
+    display.value = display.value.slice(0, -1);
+  }
+
+  function calculateResult() {
+    const expression = document.getElementById('display').value;
+    try {
+      const result = eval(expression);
+      document.getElementById('display').value = result;
+    } catch (e) {
+      document.getElementById('display').value = 'Error';
+    }
+  }
+</script>
+
+</body>
+</html>
